--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
             <!-- 右パネル: 詳細表示 (2/3 幅に変更) -->
             <div id="detail-panel" class="md:col-span-2 bg-gray-800 rounded-xl shadow-2xl px-4 pb-4 md:px-6 md:pb-6">
                 <div class="flex justify-between items-center mb-4 border-b border-gray-700 pb-2 sticky top-0 bg-gray-800 z-10">
-                    <div>
-                        <div id="detail-panel-title-kana" class="text-xs text-gray-300"></div>
-                        <h2 id="detail-panel-title" class="text-xl font-bold text-white">地震詳細</h2>
-                    </div>
+                    <h2 id="detail-panel-title" class="text-xl font-bold text-white">地震詳細</h2>
                     <!-- 観測点 / 市町村 切替スイッチをこちらに移動 -->
                     <div class="flex items-center justify-end">
                         <span id="label-municipality" class="text-sm font-bold text-blue-400 mr-2 transition-colors duration-200">市区町村別</span>
@@ -168,7 +165,7 @@
                     
                     <!-- テキスト表示エリア -->
                     <div id="shindo-content" class="flex-grow min-w-0 h-full overflow-hidden ml-2">
-                        <div id="content-line-1" class="text-sm font-medium text-gray-300 truncate text-edge"><span id="content-line-1-kana" class="text-xs text-gray-300 pr-2"></span>地震を選択してください。</div>
+                        <div id="content-line-1" class="text-sm font-medium text-gray-300 truncate text-edge">地震を選択してください。</div>
                         <div id="content-line-2" class="text-xs text-gray-400 hidden"></div>
                     </div>
                 </div>
