--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=BIZ+UDPGothic:wght@700&display=swap" rel="stylesheet">
 
     <!-- タイトルを最大震度3以上に更新 -->
-    <title>地震・津波情報トラッカー</title>
+    <title>地震情報ライブモニター</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 外部CSS・JSファイルの読み込み -->
@@ -24,7 +24,7 @@
 
     <div>
         <!-- タイトルを最大震度3以上に更新 -->
-        <h1 class="text-3xl font-extrabold text-white mb-2">地震・津波情報トラッカー</h1>
+        <h1 class="text-3xl font-extrabold text-white mb-2">地震情報ライブモニター</h1>
         <!-- 説明文を最大震度3以上に更新 -->
         <p class="text-gray-400 mb-4">直近の地震の中から、最大震度3以上を観測した地震を抽出して表示します。</p>
         <!-- メインコンテンツ (左右分割コンテナ) - md:grid-cols-3 に変更して 1:2 分割 (1/3 + 2/3) -->
