--- a/index.html
+++ b/index.html
@@ -151,9 +151,14 @@
                         </button>
                     </div>
                 </div>
-                <button id="shortcut-settings-button" class="absolute top-1 right-1 p-1 text-gray-400 hover:text-white transition" title="再生/停止のショートカットキーを設定します">
-                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
-                </button>
+                <div class="absolute top-1 right-1 flex space-x-1">
+                    <button id="kana-db-button" class="p-1 text-gray-400 hover:text-white transition" title="手動ふりがな辞書を編集します">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
+                    </button>
+                    <button id="shortcut-settings-button" class="p-1 text-gray-400 hover:text-white transition" title="再生/停止のショートカットキーを設定します">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                    </button>
+                </div>
             </div>
 
             <!-- 右: コンテンツ表示エリア（グリーンバック） -->
@@ -212,6 +217,41 @@
             </button>
         </div>
     </div>
+
+    <!-- ふりがな辞書管理モーダル -->
+    <div id="kana-db-modal" class="fixed inset-0 bg-black bg-opacity-75 z-50 hidden flex items-center justify-center p-4">
+        <div class="bg-gray-800 p-6 rounded-lg shadow-xl w-full max-w-2xl relative flex flex-col" style="max-height: 90vh;">
+            <h3 class="text-xl font-bold mb-4 flex-shrink-0">手動ふりがな辞書</h3>
+            
+            <!-- 登録済みリスト -->
+            <div id="manual-kana-list-wrapper" class="flex-grow overflow-y-auto bg-gray-900/50 p-3 rounded-md border border-gray-700 mb-4">
+                <!-- JSでリストが生成される -->
+                <p id="no-manual-kana-message" class="text-gray-400 text-center">手動登録されたデータはありません。</p>
+            </div>
+
+            <!-- 新規追加フォーム -->
+            <div class="flex-shrink-0 space-y-3">
+                <h4 class="text-lg font-semibold">新規追加・編集</h4>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-3 items-end">
+                    <div class="md:col-span-2">
+                        <label for="new-kana-key" class="block text-sm font-medium text-gray-300 mb-1">市区町村名 (例: 福島県_伊達市)</label>
+                        <input type="text" id="new-kana-key" placeholder="都道府県名_市区町村名" class="w-full p-2 border rounded-md font-mono">
+                    </div>
+                    <div>
+                        <label for="new-kana-value" class="block text-sm font-medium text-gray-300 mb-1">ふりがな (ひらがな)</label>
+                        <input type="text" id="new-kana-value" placeholder="だてし" class="w-full p-2 border rounded-md font-mono">
+                    </div>
+                </div>
+                <button id="add-kana-button" class="w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-lg transition">追加 / 更新</button>
+            </div>
+
+            <div class="flex justify-end mt-6 flex-shrink-0 space-x-3">
+                <button id="kana-db-modal-close" class="bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition">キャンセル</button>
+                <button id="kana-db-modal-save" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition">保存して閉じる</button>
+            </div>
+        </div>
+    </div>
+
     <!-- 外部JavaScriptファイルの読み込み -->
     <script src="script.js"></script>
 </body>
