--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-3 items-end">
                     <div class="md:col-span-2">
                         <label for="new-kana-key" class="block text-sm font-medium text-gray-300 mb-1">市区町村名 (例: 福島県_伊達市)</label>
-                        <input type="text" id="new-kana-key" placeholder="都道府県名_市区町村名" class="w-full p-2 border rounded-md font-mono">
+                        <input type="text" id="new-kana-key" placeholder="都道府県名_市区町村名" class="w-full p-2 border rounded-md font-mono bg-gray-700 text-white border-gray-600">
                     </div>
                     <div>
                         <label for="new-kana-value" class="block text-sm font-medium text-gray-300 mb-1">ふりがな (ひらがな)</label>
-                        <input type="text" id="new-kana-value" placeholder="だてし" class="w-full p-2 border rounded-md font-mono">
+                        <input type="text" id="new-kana-value" placeholder="だてし" class="w-full p-2 border rounded-md font-mono bg-gray-700 text-white border-gray-600">
                     </div>
                 </div>
                 <button id="add-kana-button" class="w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-lg transition">追加 / 更新</button>
