--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <!-- タイトルを最大震度3以上に更新 -->
         <h1 class="text-3xl font-extrabold text-white mb-2">地震情報ライブモニター</h1>
         <!-- 説明文を最大震度3以上に更新 -->
-        <p class="text-gray-400 mb-4">直近の地震の中から、最大震度3以上を観測した地震を抽出して配信画面に表示します。</p>
+        <p class="text-gray-400 mb-4">直近の地震の中から、最大震度3以上を観測した地震を抽出して表示します。</p>
         <!-- メインコンテンツ (左右分割コンテナ) - md:grid-cols-3 に変更して 1:2 分割 (1/3 + 2/3) -->
-        <div class="grid grid-cols-1 md:grid-cols-4 md:gap-8 full-height-panel-wrapper">
+        <div class="grid grid-cols-1 md:grid-cols-3 md:gap-8 full-height-panel-wrapper">
             
             <!-- 左パネル: 地震一覧 (1/3 幅) -->
             <div id="list-panel" class="md:col-span-1 bg-gray-800 rounded-xl shadow-2xl px-4 pb-4 md:px-6 md:pb-6 mb-6 md:mb-0">
