--- a/index.html
+++ b/index.html
@@ -253,8 +253,9 @@
                 </div>
                 <button id="kana-db-modal-close" class="bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition">キャンセル</button>
                 <button id="kana-db-modal-save" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition">保存して閉じる</button>
-            </div>
-        </div>
+                <!-- (既存の「手動辞書をエクスポート」ボタンの近くに追加することを推奨します) -->
+                <button id="export-jma-kana-button" class="px-4 py-2 bg-teal-600 text-white text-sm font-medium rounded-md hover:bg-teal-700 transition-colors">気象庁自治体辞書をエクスポート</button>
+         </div>
     </div>
 
     <!-- 外部JavaScriptファイルの読み込み -->
