--- a/index.html
+++ b/index.html
@@ -246,15 +246,15 @@
             </div>
 
             <div class="flex justify-between items-center mt-6 flex-shrink-0">
-                <div class="space-x-3">
+                <div class="flex flex-col space-y-2">
                     <button id="export-kana-button" class="bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition">エクスポート</button>
                     <input type="file" id="import-kana-file-input" class="hidden" accept=".json">
                     <button id="import-kana-button" class="bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition">インポート</button>
+                    <!-- (既存の「手動辞書をエクスポート」ボタンの近くに追加することを推奨します) -->
+                    <button id="export-jma-kana-button" class="px-4 py-2 bg-teal-600 text-white text-sm font-medium rounded-md hover:bg-teal-700 transition-colors">気象庁自治体辞書を出力</button>
                 </div>
                 <button id="kana-db-modal-close" class="bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition">キャンセル</button>
                 <button id="kana-db-modal-save" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg transition">保存して閉じる</button>
-                <!-- (既存の「手動辞書をエクスポート」ボタンの近くに追加することを推奨します) -->
-                <button id="export-jma-kana-button" class="px-4 py-2 bg-teal-600 text-white text-sm font-medium rounded-md hover:bg-teal-700 transition-colors">気象庁自治体辞書を出力</button>
          </div>
     </div>
 
