--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="flex h-full items-center justify-between">
 
             <!-- 左: ステータス/切り替えボタン (背景色設定用のラッパーを追加) -->
-            <div id="shindo-status-wrapper" class="h-full flex items-start flex-shrink-0 pt-2 pl-2 relative w-full">
+            <div id="shindo-status-wrapper" class="h-full flex items-start flex-shrink-0 pt-2 pl-2 relative">
                 <div class="flex justify-between items-start w-full">
                     <div class="flex flex-col justify-center space-y-0.5">
                         <!-- 自動ページ送りコントロール -->
