--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <!-- 左: ステータス/切り替えボタン (背景色設定用のラッパーを追加) -->
             <div id="shindo-status-wrapper" class="h-full flex items-start flex-shrink-0 pt-2 pl-2 relative">
-                <div class="flex justify-between items-start w-full">
+                <div class="flex justify-between items-start">
                     <div class="flex flex-col justify-center space-y-0.5">
                         <!-- 自動ページ送りコントロール -->
                         <div id="autoplay-controls" class="flex items-center space-x-2" style="display: none;">
