--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
     
                         <!-- ナビゲーションボタン -->
-                        <div id="shindo-nav" class="flex items-center justify-between" style="display: none;">
+                        <div id="shindo-nav" class="flex items-center justify-between w-full" style="display: none;">
                             <div class="flex items-center space-x-1">
                                 <button id="shindo-prev" class="text-white hover:text-blue-300 transition p-1 rounded-full bg-gray-700 hover:bg-gray-600 disabled:opacity-30 disabled:cursor-not-allowed" title="前のページへ">
                                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
