--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
     <!-- === 新規追加: 配信画面用の固定震度表示バー === -->
     <div id="fixed-shindo-bar" class="fixed bottom-0 left-0 right-0 shadow-2xl z-50 h-32 p-2">
         <div class="flex h-full items-center justify-between">
- 
+
             <!-- 左: ステータス/切り替えボタン (背景色設定用のラッパーを追加) -->
             <div id="shindo-status-wrapper" class="h-full flex items-start flex-shrink-0 pt-2 pl-2 relative">
                 <div class="flex flex-col justify-center space-y-0.5 w-full">
                     <!-- 自動ページ送りコントロール -->
-                    <div id="autoplay-controls" class="flex items-center space-x-2" style="display: none;">
+                    <div id="autoplay-controls" class="flex items-center space-x-1" style="display: none;">
                         <div class="flex items-center space-x-1">
                             <input type="number" id="autoplay-duration" value="10" min="1" class="autoplay-input w-12 text-center text-sm p-1">
                             <span class="text-xs text-gray-400">秒</span>
@@ -118,7 +118,16 @@
                             </select>
                             <span class="text-xs text-gray-400">回</span>
                         </div>
+                        <div class="flex items-center">
+                            <button id="kana-db-button" class="p-1 text-gray-400 hover:text-white transition" title="手動ふりがな辞書を編集します">
+                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path></svg>
+                            </button>
+                            <button id="shortcut-settings-button" class="p-1 text-gray-400 hover:text-white transition" title="再生/停止のショートカットキーを設定します">
+                                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+                            </button>
+                        </div>
                     </div>
+
 
                     <!-- ナビゲーションボタン -->
                     <div id="shindo-nav" class="flex items-center justify-between" style="display: none;">
@@ -261,4 +270,5 @@
     <!-- 外部JavaScriptファイルの読み込み -->
     <script src="script.js"></script>
 </body>
+
 </html>
