--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
     </div>
 
     <div>
-        <!-- タイトルを最大震度3以上に更新 -->
-        <h1 class="text-3xl font-extrabold text-white mb-2">地震情報ライブモニター</h1>
-        <!-- 説明文を最大震度3以上に更新 -->
+        <div class="flex justify-between items-center mb-2">
+            <!-- タイトルを最大震度3以上に更新 -->
+            <h1 class="text-3xl font-extrabold text-white">地震情報ライブモニター</h1>
+            <!-- 緊急地震速報(EEW)アラート表示エリア -->
+            <div id="eew-alert-container" class="hidden items-center p-3 rounded-lg bg-red-900 border-2 border-red-500 animate-pulse">
+                <svg id="eew-icon" class="w-8 h-8 text-red-400 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>
+                <span id="eew-alert-text" class="text-xl font-bold text-white"></span>
+            </div>
+        </div>
+         <!-- 説明文を最大震度3以上に更新 -->
         <p class="text-gray-400 mb-4">直近の地震の中から、最大震度3以上を観測した地震を抽出して表示します。</p>
         <!-- メインコンテンツ (左右分割コンテナ) - md:grid-cols-3 に変更して 1:2 分割 (1/3 + 2/3) -->
         <div class="grid grid-cols-1 md:grid-cols-3 md:gap-8 full-height-panel-wrapper">
@@ -189,6 +196,12 @@
                     <input type="text" id="shortcut-modal-input" readonly class="w-full p-2 border rounded-md text-center text-lg font-mono">
                 </div>
                 <div>
+                    <label for="eew-sound-toggle" class="flex items-center cursor-pointer mt-4">
+                        <input type="checkbox" id="eew-sound-toggle" class="form-checkbox h-5 w-5 text-blue-600 rounded bg-gray-700 border-gray-600 focus:ring-blue-500">
+                        <span class="ml-3 text-gray-300">緊急地震速報(EEW)受信時に通知音を再生する</span>
+                    </label>
+                </div>
+                <div>
                     <label for="loop-min-shindo-select" class="block text-sm font-medium text-gray-300 mb-1">情報画面に表示する最低震度</label>
                     <select id="loop-min-shindo-select" class="w-full p-2 border rounded-md text-white" style="background-color: #1f2937; border-color: #4b5563;">
                         <option value="10">震度1以上</option>
@@ -200,6 +213,20 @@
                         <option value="55">震度6弱以上</option>
                         <option value="60">震度6強以上</option>
                         <option value="70">震度7</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="list-min-shindo-select" class="block text-sm font-medium text-gray-300 mb-1">地震一覧のフィルタ（最大震度）</label>
+                    <select id="list-min-shindo-select" class="w-full p-2 border rounded-md text-white" style="background-color: #1f2937; border-color: #4b5563;">
+                        <option value="10">最大震度1以上</option>
+                        <option value="20">最大震度2以上</option>
+                        <option value="30" selected>最大震度3以上</option>
+                        <option value="40">最大震度4以上</option>
+                        <option value="45">最大震度5弱以上</option>
+                        <option value="50">最大震度5強以上</option>
+                        <option value="55">最大震度6弱以上</option>
+                        <option value="60">最大震度6強以上</option>
+                        <option value="70">最大震度7</option>
                     </select>
                 </div>
             </div>
