--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- タイトルを最大震度3以上に更新 -->
             <h1 class="text-3xl font-extrabold text-white">地震情報ライブモニター</h1>
             <!-- 緊急地震速報(EEW)アラート表示エリア -->
-            <div id="eew-alert-container" class="hidden items-center p-3 rounded-lg bg-red-900 border-2 border-red-500 animate-pulse">
+            <div id="eew-alert-container" class="hidden items-center p-3 rounded-lg bg-red-800 border-2 border-red-500 animate-bounce" style="animation-duration: 2s;">
                 <svg id="eew-icon" class="w-8 h-8 text-red-400 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>
                 <span id="eew-alert-text" class="text-xl font-bold text-white"></span>
             </div>
